--- a/css/barbeiros.css
+++ b/css/barbeiros.css
@@ -93,21 +93,28 @@ h2{
 
 /* RESPONSIVIDADE */
 
-@media (max-width: 480px){
-  
-    header{
-        width: 479px;
-        padding: 80px;
-        margin: 0 auto;
-    }
+@media (min-width: 1px) and (max-width: 480px){
     .logo{
         display: none;
     }
 
     h2{
-        font-size: 35px;
+        font-size: 30px;
     }
 
+    .formulario{
+        width: 80%;
+    }
+    #cards{
+        width: 87%;
+    }
+    .card{
+        width: 100%;
+        height: 420px;
+    }
+    .cardTxt{
+        height: 41%;
+    }
 }
 
 @media (min-width: 481px) and (max-width: 768px){
@@ -115,9 +122,38 @@ h2{
         font-size: 35px;
     }
 
+    .formulario{
+        width: 80%;
+    }
+    #cards{
+        width: 87%;
+    }
+    .card{
+        width: 100%;
+        height: 420px;
+    }
+    .cardTxt{
+        height: 41%;
+    }
 }
 
-@media (min-width: 769px){
+@media (min-width: 769px) and (max-width: 1000px){
+    .formulario{
+        width: 45%;
+    }
+    #cards{
+        width: 45%;
+    }
+    .card{
+        width: 100%;
+        height: 410px;
+    }
+    .cardTxt{
+        height: 41%;
+    }
+}
+
+@media (min-width: 1001px){
     body{
         width: 100%;
     }
